[gd_scene load_steps=11 format=3 uid="uid://svmtyen6467m"]

[ext_resource type="Theme" path="res://data/themes/global.tres" id="1_tbr8t"]
[ext_resource type="Script" path="res://src/global/ui.gd" id="2_a5m5u"]
[ext_resource type="Script" path="res://src/ui/ammo_label.gd" id="3_swlqn"]
[ext_resource type="Texture2D" uid="uid://do3jtp6o3ow5q" path="res://data/images/ui/Crosshair.png" id="4_lt4dn"]
[ext_resource type="Script" path="res://src/voicetron/dialog_system.gd" id="5_fj0hu"]
[ext_resource type="Texture2D" uid="uid://cfwrdu0r685sy" path="res://data/images/portraits/floberts_portrait.png" id="6_458v4"]
[ext_resource type="FontFile" uid="uid://c22sxid24mwvu" path="res://data/fonts/dogicapixel.otf" id="7_jh4u4"]
[ext_resource type="Script" path="res://src/ui/interaction_label.gd" id="8_5u67v"]

[sub_resource type="GDScript" id="GDScript_mpo74"]
resource_name = "FPSCounter"
script/source = "extends Label

func _process(delta):
	var fps = Engine.get_frames_per_second()
	text = \"%s fps\" % fps
"

[sub_resource type="LabelSettings" id="LabelSettings_n8sct"]
font = ExtResource("7_jh4u4")
font_size = 8

[node name="MainUI" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(480, 270)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tbr8t")
script = ExtResource("2_a5m5u")

[node name="FpsCounter" type="Panel" parent="."]
layout_mode = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 52.0
offset_bottom = 28.0

[node name="VSplitContainer" type="VSplitContainer" parent="FpsCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="fpsLabel" type="Label" parent="FpsCounter/VSplitContainer"]
layout_mode = 2
text = "000 fps"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_mpo74")

[node name="AmmoCounter" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 28.0
grow_horizontal = 0

[node name="VSplitContainer" type="VSplitContainer" parent="AmmoCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ammoLabel" type="Label" parent="AmmoCounter/VSplitContainer"]
layout_mode = 2
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_swlqn")

[node name="Crosshair" type="TextureRect" parent="."]
visible = false
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lt4dn")

[node name="DialogSystem" type="Control" parent="."]
custom_minimum_size = Vector2(480, 270)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -270.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_tbr8t")
script = ExtResource("5_fj0hu")

[node name="Panel" type="Panel" parent="DialogSystem"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -35.0
offset_right = -22.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="DialogSystem/Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = -11.0
offset_right = 119.0
offset_bottom = -1.0
text = "NOMBRE"

[node name="TextureRect" type="TextureRect" parent="DialogSystem/Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = -64.0
offset_right = 74.0
texture = ExtResource("6_458v4")

[node name="DialogText" type="Label" parent="DialogSystem/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -7.5
offset_right = 192.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
text = "Ol√° amigos bem vindos ao meu game espero que gostem lesgooo"
label_settings = SubResource("LabelSettings_n8sct")
vertical_alignment = 1

[node name="Timer" type="Timer" parent="DialogSystem/Panel"]
wait_time = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogSystem/Panel"]
volume_db = 12.0

[node name="ContinuePrompt" type="Label" parent="DialogSystem/Panel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.0
offset_top = -8.0
offset_bottom = 2.0
grow_horizontal = 0
text = "Press \"F\" to continue"

[node name="InteractableLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -5.0
offset_right = 164.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "Press \"F\" to interact"
script = ExtResource("8_5u67v")

[connection signal="timeout" from="DialogSystem/Panel/Timer" to="DialogSystem" method="_on_timer_timeout" flags=18]
